--- a/styles/main.css
+++ b/styles/main.css
@@ -71,7 +71,7 @@ img.next-image {
 
 
 header {
-  background-color: #ffffff; /* Adjust background color as needed */
+  background-color: #eee; /* Adjust background color as needed */
   padding: 0px;
   margin-top: 10px;
 }
@@ -90,7 +90,7 @@ nav {
 .social-links a {
   display: flex;
   align-items: center; /* Center the content of each link horizontally and vertically */
-  color: white;
+  color: rgb(247, 244, 244);
   text-decoration: none;
 }
 
@@ -98,7 +98,7 @@ nav {
   width: 20px; /* Adjust the width of the social media icons */
   height: 20px; /* Adjust the height of the social media icons */
   margin-right: 30px;
-  margin-bottom: 0px;
+  margin-bottom: 3px;
   margin-left: 30px;
   margin-top: 3px; /* Add some space between the icons */
 }
